--- a/interfaces.html
+++ b/interfaces.html
@@ -160,7 +160,7 @@ pre.code {
                 <li><span class="code">isInverted</span> = Whether to invert colors</li>
             </ul>
         </div>
-        <pre class="code">termDriver.writeText(
+        <pre class="code">termDriver.wrtText(
     p text
 )</pre>
         <div class="description">
