Changed structure of bytecode application file and interface file

--- a/architecture.html
+++ b/architecture.html
@@ -254,6 +254,7 @@ pre.code {
         <p><span class="code">app</span> = Application</p>
         <p><span class="code">arg</span> = Argument</p>
         <p><span class="code">async</span> = Asynchronous</p>
+        <p><span class="code">attr</span> = Attribute</p>
         <p><span class="code">buff</span> = Buffer</p>
         <p><span class="code">clr</span> = Clear</p>
         <p><span class="code">cmp</span> = Compare</p>
@@ -262,6 +263,7 @@ pre.code {
         <p><span class="code">cond</span> = Condition</p>
         <p><span class="code">del</span> = Delete</p>
         <p><span class="code">delim</span> = Delimiter</p>
+        <p><span class="code">desc</span> = Description</p>
         <p><span class="code">dest</span> = Destination</p>
         <p><span class="code">dir</span> = Directory</p>
         <p><span class="code">equ</span> = Equal</p>
@@ -279,7 +281,9 @@ pre.code {
         <p><span class="code">opt</span> = Option</p>
         <p><span class="code">pos</span> = Position</p>
         <p><span class="code">prio</span> = Priority</p>
+        <p><span class="code">priv</span> = Private</p>
         <p><span class="code">prop</span> = Propagation</p>
+        <p><span class="code">pub</span> = Public</p>
         <p><span class="code">ref</span> = Reference</p>
         <p><span class="code">rel</span> = Release</p>
         <p><span class="code">sLink</span> = Soft link</p>
