Add more description for system errors

--- a/architecture.html
+++ b/architecture.html
@@ -272,12 +272,13 @@ pre.code {
         <p><span class="code">err</span> = Error</p>
         <p><span class="code">func</span> = Function</p>
         <p><span class="code">iface</span> = Interface</p>
+        <p><span class="code">impl</span> = Implementation</p>
         <p><span class="code">init</span> = Initialize</p>
         <p><span class="code">instr</span> = Instruction</p>
         <p><span class="code">jmp</span> = Jump</p>
         <p><span class="code">len</span> = Length</p>
         <p><span class="code">max</span> = Maximum</p>
-        <p><span class="code">mem</span> = Mem</p>
+        <p><span class="code">mem</span> = Memory</p>
         <p><span class="code">min</span> = Minimum</p>
         <p><span class="code">msg</span> = Message</p>
         <p><span class="code">num</span> = Number</p>
