--- a/bytecodeTemplate.html
+++ b/bytecodeTemplate.html
@@ -129,6 +129,29 @@ pre.code {
             <li>If permission propagation count is not infinite, the propagation count will be zero.</li>
             <li>A temporary permission will be removed after invocation has completed.</li>
         </ul>
+        <p>File types:</p>
+        <ul>
+            <li><span class="code">0</span> = Generic file</li>
+            <li><span class="code">1</span> = Bytecode application file</li>
+            <li><span class="code">2</span> = System application file</li>
+            <li><span class="code">3</span> = Interface file</li>
+        </ul>
+        <p>Directory types:</p>
+        <ul>
+            <li><span class="code">0</span> = Generic directory</li>
+            <li><span class="code">1</span> = Application bundle</li>
+            <li><span class="code">2</span> = Interface bundle</li>
+        </ul>
+        <pre class="code">Stack trace = [
+    Array of instruction locations
+]</pre>
+        <p>Instruction locations in a stack trace are ordered from deepest to most shallow.</p>
+        <pre class="code">Instruction location = [
+    Pointer to agent,
+    u64 function index,
+    u64 instruction index
+]</pre>
+        <p>The function index is an index to a function region.</p>
         <pre class="code">Region = [
     u16 region type,
     u8 length of region data size,
@@ -447,82 +470,100 @@ pre.code {
     Pointer as nested argument
     Allocation index as nested argument
 ]</pre>
-        <p class="title2">ENUMERATIONS AND ALLOCATION STRUCTURES</p>
-        <p>File types:</p>
-        <ul>
-            <li><span class="code">0</span> = Generic file</li>
-            <li><span class="code">1</span> = Bytecode application file</li>
-            <li><span class="code">2</span> = System application file</li>
-            <li><span class="code">3</span> = Interface file</li>
-        </ul>
-        <p>Directory types:</p>
-        <ul>
-            <li><span class="code">0</span> = Generic directory</li>
-            <li><span class="code">1</span> = Application bundle</li>
-            <li><span class="code">2</span> = Interface bundle</li>
-        </ul>
+        <p class="title2">SYSTEM ERRORS</p>
         <p><span class="code">genericErr</span> error code = <span class="code">0x0000</span></p>
         <div class="description">
             <p>Thrown if a problem occurs which cannot be described by a more specific error code.</p>
         </div>
-        <p><span class="code">numRangeErr</span> error code = <span class="code">0x0001</span></p>
+        <p><span class="code">noImplErr</span> error code = <span class="code">0x0001</span></p>
+        <div class="description">
+            <p>Thrown if no implementation is available for the given operation. This includes the following circumstances:</p>
+            <ul>
+                <li>The interpreter tries to evaluate an instruction which has an unknown opcode</li>
+            </ul>
+        </div>
+        <p><span class="code">typeErr</span> error code = <span class="code">0x0002</span></p>
+        <div class="description">
+            <p>Thrown if a value or resource has the wrong type. This includes the following circumstances:</p>
+            <ul>
+                <li>A file or directory has an unexpected type</li>
+                <li>A file region has an unexpected type</li>
+                <li>An instruction argument has an unknown reference type or data type</li>
+                <li>An instruction argument is a pointer when a number is expected</li>
+                <li>An instruction argument is a number when a pointer is expected</li>
+                <li>An instruction argument has an unexpected sentry type</li>
+                <li>An instruction argument is not constant when a constant value is expected</li>
+            </ul>
+        </div>
+        <p><span class="code">numRangeErr</span> error code = <span class="code">0x0003</span></p>
         <div class="description">
             <p>Thrown if a number argument is not in an acceptable range.</p>
         </div>
-        <p><span class="code">indexErr</span> error code = <span class="code">0x0002</span></p>
+        <p><span class="code">indexErr</span> error code = <span class="code">0x0004</span></p>
         <div class="description">
-            <p>Thrown if an index argument is out of bounds or refers to an invalid item.</p>
+            <p>Thrown if an index argument is out of bounds or refers to an invalid item. This includes the following circumstances:</p>
+            <ul>
+                <li>A dependency region index is out of bounds</li>
+                <li>A pointer argument index is out of bounds</li>
+                <li>An instruction index is out of bounds</li>
+                <li>An index in a frame is out of bounds</li>
+                <li>An index in the app data region is out of bounds</li>
+                <li>An index in a heap allocation is out of bounds</li>
+            </ul>
         </div>
-        <p><span class="code">nullErr</span> error code = <span class="code">0x0003</span></p>
+        <p><span class="code">nullErr</span> error code = <span class="code">0x0005</span></p>
         <div class="description">
             <p>Thrown if a pointer argument has an unexpected null value.</p>
         </div>
-        <p><span class="code">typeErr</span> error code = <span class="code">0x0004</span></p>
+        <p><span class="code">dataErr</span> error code = <span class="code">0x0006</span></p>
         <div class="description">
-            <p>Thrown if a resource has the wrong type.</p>
+            <p>Thrown if an argument data structure contains malformed data. This includes the following circumstances:</p>
+            <ul>
+                <li>A file region has an unexpected size</li>
+            </ul>
         </div>
-        <p><span class="code">dataErr</span> error code = <span class="code">0x0005</span></p>
-        <div class="description">
-            <p>Thrown if an argument data structure contains malformed data.</p>
-        </div>
-        <p><span class="code">compatErr</span> error code = <span class="code">0x0006</span></p>
-        <div class="description">
-            <p>Thrown if a resource has the wrong version or interfaces.</p>
-        </div>
-        <p><span class="code">permErr</span> error code = <span class="code">0x0007</span></p>
-        <div class="description">
-            <p>Thrown if the current agent has insufficient permissions to perform an action.</p>
-        </div>
-        <p><span class="code">argFrameErr</span> error code = <span class="code">0x0008</span></p>
+        <p><span class="code">argFrameErr</span> error code = <span class="code">0x0007</span></p>
         <div class="description">
             <p>Thrown when invoking a function if the next argument frame has invalid structure.</p>
+        </div>
+        <p><span class="code">missingErr</span> error code = <span class="code">0x0008</span></p>
+        <div class="description">
+            <p>Thrown if a necessary resource does not exist. This includes the following circumstances:</p>
+            <ul>
+                <li>A required dependency cannot be found</li>
+            </ul>
         </div>
         <p><span class="code">stateErr</span> error code = <span class="code">0x0009</span></p>
         <div class="description">
             <p>Thrown when trying to use a resource which is in an invalid state.</p>
         </div>
-        <p><span class="code">missingErr</span> error code = <span class="code">0x000A</span></p>
+        <p><span class="code">compatErr</span> error code = <span class="code">0x000A</span></p>
         <div class="description">
-            <p>Thrown if a necessary resource does not exist.</p>
+            <p>Thrown if a resource has the wrong version or interfaces. This includes the following circumstances:</p>
+            <ul>
+                <li>A bytecode app file or interface file has an incompatible file format version</li>
+                <li>A bytecode app conforms to an interface but does not implement every interface function</li>
+                <li>A bytecode app defines a public function with no corresponding interface function</li>
+                <li>A bytecode app defines a public function in a manner inconsistent with its corresponding interface function</li>
+            </ul>
         </div>
-        <p><span class="code">capacityErr</span> error code = <span class="code">0x000B</span></p>
+        <p><span class="code">permErr</span> error code = <span class="code">0x000B</span></p>
+        <div class="description">
+            <p>Thrown if the current agent has insufficient permissions to perform an action. This includes the following circumstances:</p>
+            <ul>
+                <li>An agent tries to directly read the alpha region or beta region of a heap allocation, but the agent does not hold permission to <span class="code">allocReadProtab</span> on the allocation</li>
+                <li>An agent tries to directly modify the alpha region, beta region, or sentry type of a heap allocation, but the agent does not hold permission to <span class="code">allocWrtProtab</span> on the allocation</li>
+                <li>An agent tries to invoke a public function, but does not hold all pointer argument permissions described by the function</li>
+            </ul>
+        </div>
+        <p><span class="code">capacityErr</span> error code = <span class="code">0x000C</span></p>
         <div class="description">
             <p>Thrown if the system has insufficient hardware resources for the operation.</p>
         </div>
-        <p><span class="code">throttleErr</span> error code = <span class="code">0x000C</span></p>
+        <p><span class="code">throttleErr</span> error code = <span class="code">0x000D</span></p>
         <div class="description">
             <p>Thrown when the current agent is using too much memory.</p>
         </div>
-        <pre class="code">Stack trace = [
-    Array of instruction locations
-]</pre>
-        <p>Instruction locations are ordered from deepest to most shallow.</p>
-        <pre class="code">Instruction location = [
-    Pointer to agent,
-    u64 function index,
-    u64 instruction index
-]</pre>
-        <p>The function index is an index to a function region.</p>
 {INSTRUCTIONS}
     </body>
 </html>
