Add more error conditions

--- a/bytecodeTemplate.html
+++ b/bytecodeTemplate.html
@@ -499,7 +499,7 @@ pre.code {
         <div class="description">
             <p>Thrown if a number argument is not in an acceptable range. This includes the following circumstances:</p>
             <ul>
-                <li>An argument representing a length or number of elements is negative (unless a negative value holds special significance in the context of the instruction)</li>
+                <li>An argument representing a length, size, or number of elements is negative (unless a negative value holds special significance in the context of the instruction)</li>
             </ul>
         </div>
         <p><span class="code">indexErr</span> error code = <span class="code">0x0004</span></p>
@@ -535,7 +535,7 @@ pre.code {
         <div class="description">
             <p>Thrown if a necessary resource does not exist. This includes the following circumstances:</p>
             <ul>
-                <li>A required dependency cannot be found</li>
+                <li>A volume item required for an operation does not exist</li>
                 <li>An agent required for an operation has quit</li>
             </ul>
         </div>
